# dangerous_dave

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
.github/workflows/: cmake.yml
assets/niveis/: fase_01.txt  fase_02.txt  fase_03.txt
docs/: bibliotecasUsadas.md  objetos.md
src/: AppStateMachine.c  AppStateMachine.h  Menu.c  Menu.h  config  config.h  core.h  erros.c  erros.h  fase_01.h  fase_01.txt  files.h  game  game.c  game.h  main.c  main.h  mapa.c  mapa.h  tempCodeRunnerFile  tempCodeRunnerFile.h
src/controller/: AppStateMachine.c  AppStateMachine.h  game.c  game.h  gameController.c  gameController.h  menuController.c  menuController.h
src/models/: Encerramento.c  Encerramento.h  Entidade.c  Entidade.h  Menu.c  Menu.h  Timer.c  Timer.h  Vec.h  game.c  game.h  ranking  ranking.c  ranking.h  ranking.txt  tempCodeRunnerFile.c
src/utils/: erros.c  erros.h  time_utils.c  time_utils.h
src/views/: MenuView.c  MenuView.h  encerramentoView.c  encerramentoView.h  gameView.c  gameView.h
